# llamatelemetry

./: .gitignore  .readthedocs.yaml  BUILD_METADATA.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CUDA_BUILD_GUIDE_v2.0.md  INSTALL.md  MANIFEST.in  QUICK_START.md  README.md  READTHEDOCS_SETUP.md  V2.0_FILE_MANIFEST.txt  VERIFICATION_v2.0.py  mkdocs.yml  pyproject.toml  requirements-jupyter.txt
core/: __init__.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  CONFIGURATION.md  FINAL_WORKFLOW_GUIDE.md  GGUF_GUIDE.md  GGUF_NEURAL_NETWORK_VISUALIZATION.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES_SIMPLIFIED.md  GOLDEN_PATH.md  INDEX.md  INSTALLATION.md  INTEGRATION_GUIDE.md  KAGGLE_GUIDE.md  NOTEBOOKS_GUIDE.md  PYPI_PACKAGE_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  TROUBLESHOOTING.md  index.md
examples/: README.md  kaggle_gguf_inference_example.py  quickstart_jupyterlab.ipynb
llamatelemetry/: __init__.py  _legacy_init.py  _version.py  compat.py  config.py  gguf_parser.py  inference_engine.py  models.py  sdk.py  server.py  utils.py
llamatelemetry-pdf-portfolio/: Makefile  QUICK_START.md  README.md  compile.sh  llamatelemetry_v0_1_0_portfolio.tex
notebooks/: 00-INDEX-NEW-NOTEBOOKS.md  01-quickstart-llamatelemetry-v0-1-0-e1.ipynb  01-quickstart-llamatelemetry-v0.1.0.ipynb  01-quickstart.ipynb  02-llama-server-setup-llamatelemetry-v0-1-0-e1.ipynb  02-llama-server-setup-llamatelemetry-v0.1.0.ipynb  02-server-configuration.ipynb  03-multi-gpu-inference-llamatelemetry-v0-1-0-e1.ipynb  03-multi-gpu-inference-llamatelemetry-v0.1.0.ipynb  03-multi-gpu-inference.ipynb  04-gguf-quantization-llamatelemetry-v0-1-0-e1.ipynb  04-gguf-quantization-llamatelemetry-v0.1.0.ipynb  04-gguf-quantization.ipynb  05-unsloth-finetune.ipynb  05-unsloth-integration-llamatelemetry-v0-1-0-e1.ipynb  05-unsloth-integration-llamatelemetry-v0.1.0.ipynb  06-graphistry-visualization.ipynb  06-split-gpu-graphistry-llamatelemetry-v0-1-0-e1.ipynb  06-split-gpu-graphistry-llamatelemetry-v0-1-0.ipynb  07-knowledge-graph-extraction-graphistry-v0-1-0-e1.ipynb  07-knowledge-graph-extraction-graphistry-v0.1.0.ipynb  07-knowledge-graph-extraction.ipynb  08-document-network-analysis-graphistry-e1.ipynb  08-document-network-analysis-graphistry-llamatelemetry-v0-1-0.ipynb  08-document-network-analysis.ipynb  09-large-models-kaggle-llamatelemetry-e1.ipynb  09-large-models-kaggle-llamatelemetry-e2.ipynb  09-large-models-kaggle-llamatelemetry-e3.ipynb  09-large-models-kaggle-llamatelemetry-v0-1-0.ipynb  09-large-models.ipynb  10-complete-workflow-llamatelemetry-v0-1-0-e1.ipynb  10-complete-workflow-llamatelemetry-v0-1-0.ipynb  10-complete-workflow.ipynb  11-gguf-architecture-explorer.ipynb  11-gguf-neural-network-graphistry-vis-executed-2.ipynb  (+21 more)
releases/v0.1.0/analysis/extracted-source/: CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  requirements-jupyter.txt  requirements.txt  server.py  setup.py
releases/v0.1.0/analysis/extracted-source/csrc/: bindings.cpp
releases/v0.1.0/analysis/extracted-source/csrc/core/: device.cu  device.h  tensor.cu  tensor.h
releases/v0.1.0/analysis/extracted-source/csrc/ops/: matmul.cu  matmul.h
releases/v0.1.0/analysis/extracted-source/docs/: ARCHITECTURE.md  BUILD_GUIDE.md  CONFIGURATION.md  FINAL_WORKFLOW_GUIDE.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES_SIMPLIFIED.md  INDEX.md  INTEGRATION_GUIDE.md  LINKEDIN_POST_V0.1.0.md  NOTEBOOKS_GUIDE.md  PYPI_PACKAGE_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  RELEASE_FILES_OVERVIEW.txt  TROUBLESHOOTING.md  requirements.txt
releases/v0.1.0/analysis/extracted-source/docs/huggingface/: HUGGINGFACE_ORG_CARD_FIX.md  HUGGINGFACE_ORG_FIX_GUIDE.md  HUGGINGFACE_SETUP_INSTRUCTIONS.md  add_admin_to_org.md  llamatelemetry_binaries_readme.md  llamatelemetry_models_readme.md  llamatelemetry_org_card.md
releases/v0.1.0/analysis/extracted-source/docs/reference/: LLAMATELEMETRY_QUICK_REFERENCE.md
releases/v0.1.0/analysis/extracted-source/examples/: api_usage_examples.py  complete_workflow_example.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/: chat.py  embeddings.py  gguf_parser.py  jupyter.py  server.py  utils.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/_internal/: registry.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/api/: __init__.py  client.py  gguf.py  multigpu.py  nccl.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/cuda/: __init__.py  graphs.py  tensor_core.py  triton_kernels.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/graphistry/: __init__.py  connector.py  rapids.py  viz.py  workload.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/inference/: __init__.py  batch.py  flash_attn.py  kv_cache.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/kaggle/: __init__.py  environment.py  gpu_context.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/louie/: __init__.py  client.py  knowledge.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/quantization/: __init__.py  dynamic.py  gguf.py  nf4.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/telemetry/: exporter.py  graphistry_export.py  instrumentor.py  metrics.py  resource.py  tracer.py
releases/v0.1.0/analysis/extracted-source/llamatelemetry/unsloth/: __init__.py  adapter.py  exporter.py  loader.py
releases/v0.1.0/analysis/extracted-source/notebooks/: README.md  VISUAL-COMPARISON.md
releases/v0.1.0/analysis/extracted-source/scripts/: BUILD_AND_INTEGRATE.sh  CREATE_RELEASE_PACKAGE.sh  build_github_release.sh  cmake_build_t4.sh  set_python311_default.sh  test_package.sh
releases/v0.1.0/analysis/extracted-source/scripts/huggingface/: upload_to_huggingface.py  upload_to_llamatelemetry_org.py
releases/v0.1.0/analysis/extracted-source/scripts/verification/: test_kaggle_install.py
releases/v0.1.0/analysis/extracted-source/tests/: __init__.py  test_end_to_end.py  test_full_workflow.py  test_gguf_parser.py  test_llamatelemetry.py  test_new_apis.py  test_tensor_api.py
(+176 files in other folders)
